5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1577_1330.log
== SUBMITION (2019-03-14 19:36:20) 
-- CODE:
round(41.66)
-- EXECUTION TIME:
0.186128
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:36:38) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.196157
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:36:41) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:36:49) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.206877
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:37:40) 
-- CODE:
round(41.66)
-- EXECUTION TIME:
0.158578
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:39:31) 
-- CODE:
round("41.66")
-- EXECUTION TIME:
0.21662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 1, in <module>
    round("41.66")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:08:28) 
-- CODE:
round("41.66")
-- EXECUTION TIME:
0.148846
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 1, in <module>
    round("41.66")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:08:31) 
-- CODE:
round("41.66")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("41.66")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:09:04) 
-- CODE:
round("41,66")
-- EXECUTION TIME:
0.20614
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 1, in <module>
    round("41,66")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:10:53) 
-- CODE:
round("41,6")
-- EXECUTION TIME:
0.14419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 1, in <module>
    round("41,6")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:11:01) 
-- CODE:
round("42")
-- EXECUTION TIME:
0.188705
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 1, in <module>
    round("42")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:36:36) 
-- CODE:
round(250/6)
round
-- EXECUTION TIME:
0.126425
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:36:40) 
-- CODE:
round(250/6)
round
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("41.66")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:38:19) 
-- CODE:
round("41.66")
print("41.66")
-- EXECUTION TIME:
0.18053
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 1, in <module>
    round("41.66")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:38:42) 
-- CODE:
round print("41.66")

-- EXECUTION TIME:
0.151902
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    round print("41.66")
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:38:49) 
-- CODE:
print("41.66")

-- EXECUTION TIME:
0.143688
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:39:26) 
-- CODE:
round(41.66)
print(41.66)

-- EXECUTION TIME:
0.16995
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:39:55) 
-- CODE:
round(41.66)
print(41.66)

-- EXECUTION TIME:
0.146829
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:40:33) 
-- CODE:
round(41.66666)
print(41.66666)

-- EXECUTION TIME:
0.147255
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:47:25) 
-- CODE:
round(41.66)
print(41.66)

-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:47:32) 
-- CODE:
round(41.66)
print(41.66)

-- EXECUTION TIME:
0.135475
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 18:47:37) 
-- CODE:
round(41.66)
print(41.66)

-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 18:55:32) 
-- CODE:
round(41.66)
print("41.66")

-- EXECUTION TIME:
0.153499
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:00:00) 
-- CODE:
round(250/6)
print(round)
-- EXECUTION TIME:
0.150137
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
<built-in function round>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:06:07) 
-- CODE:
round(250/6)
print(round)
-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:06:11) 
-- CODE:
round(250/6)
print(round)
-- EXECUTION TIME:
0.167147
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
<built-in function round>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:06:30) 
-- CODE:
round(250/6)
print(41.66)
-- EXECUTION TIME:
0.162418
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:07:04) 
-- CODE:
round (41.66)
print (round)
-- EXECUTION TIME:
0.166345
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
<built-in function round>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:08:22) 
-- CODE:
print (round(250/6 ,2))
-- EXECUTION TIME:
0.14159
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:16:07) 
-- CODE:
print (round(250/6 ,2))
-- EXECUTION TIME:
0.153982
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
